Introduce EntityEntry